--- a/ACAI/acaisdk/example/example_workflow.ipynb
+++ b/ACAI/acaisdk/example/example_workflow.ipynb
@@ -15,8 +15,10 @@
     "from acaisdk.job import Job\n",
     "from acaisdk.meta import *\n",
     "from acaisdk.utils import utils\n",
+    "from acaisdk.credentials import get_credentials\n",
     "\n",
-    "utils.DEBUG = True  # print debug messages"
+    "utils.DEBUG = True  # print debug messages\n",
+    "workspace = os.path.dirname(os.path.realpath('__file__'))  # get current directory"
    ]
   },
   {
@@ -26,19 +28,10 @@
    "outputs": [],
    "source": [
     "# Make your changes here\n",
-    "project_id = 'yourprojectname'\n",
+    "project_id = \"your_project_name\"\n",
     "root_token = 'Ask sys guys for the root token'\n",
-    "project_admin = 'proj_admin'\n",
-    "user = 'ATeam'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "workspace = os.path.dirname(os.path.realpath('__file__'))"
+    "project_admin = 'allen'\n",
+    "user = 'albert'"
    ]
   },
   {
@@ -48,8 +41,9 @@
    "outputs": [],
    "source": [
     "# Create project and user\n",
-    "r = Project.create_project(project_id, root_token, 'proj_admin')\n",
-    "r = Project.create_user(project_id, r['project_admin_token'], user)"
+    "r = Project.create_project(project_id, root_token, project_admin)\n",
+    "# Login is done automatically upon user creation\n",
+    "r = Project.create_user(project_id, r['project_admin_token'], user)  "
    ]
   },
   {
@@ -58,7 +52,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ.update({'ACAI_TOKEN': r['user_token']})"
+    "# you can inspect your token in multiple ways\n",
+    "print(r['user_token'])\n",
+    "print(os.environ['ACAI_TOKEN'])\n",
+    "print(get_credentials())"
    ]
   },
   {
@@ -98,7 +95,7 @@
     "    \"gpu\": \"0\",\n",
     "    \"command\": \"mkdir -p ./my_output/ && (cat Shakespeare/* | python3 wordcount.py ./my_output/)\",\n",
     "    \"container_image\": \"pytorch/pytorch\",\n",
-    "    'input_file_set': 'shakespeare.texts',\n",
+    "    'input_file_set': 'shakespeare.works',\n",
     "    'output_path': './my_output/',\n",
     "    'code': '/wordcount.zip',\n",
     "    'description': 'count some words from Shakespeare works',\n",
