update scheduler for bayesian search interface

--- a/ACAI/acaisdk/example/example1/example_workflow.ipynb
+++ b/ACAI/acaisdk/example/example1/example_workflow.ipynb
@@ -15,7 +15,7 @@
     "from acaisdk.job import Job\n",
     "from acaisdk.meta import *\n",
     "from acaisdk.utils import utils\n",
-    "from acaisdk.credentials import get_credentials\n",
+    "from acaisdk import credentials\n",
     "\n",
     "utils.DEBUG = True  # print debug messages\n",
     "workspace = os.path.dirname(os.path.realpath('__file__'))  # get current directory"
@@ -55,7 +55,7 @@
     "# you can inspect your token in multiple ways\n",
     "print(r['user_token'])\n",
     "print(os.environ['ACAI_TOKEN'])\n",
-    "print(get_credentials())"
+    "print(credentials.get_credentials())"
    ]
   },
   {
@@ -75,10 +75,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "credentials.login('8gyszGh9LaR1uk90cfrdXpahZZxXFSFt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Upload input files and create file set\n",
     "input_dir = os.path.join(workspace, 'Shakespeare')\n",
-    "File.convert_to_file_mapping([input_dir], 'Shakespeare/')[0]\\\n",
-    "    .upload()\\\n",
+    "File.convert_to_file_mapping([input_dir], 'Shakespeare/') \\\n",
+    "    .files_to_upload \\\n",
+    "    .upload() \\\n",
     "    .as_new_file_set('shakespeare.works')"
    ]
   },
@@ -102,7 +112,7 @@
     "    'name': 'my_acai_job'\n",
     "}\n",
     "\n",
-    "j = Job().with_attributes(job_setting).register().run()"
+    "j = Job().with_attributes(job_setting).run()"
    ]
   },
   {
