--- a/ACAI/acaisdk/example/example2/example_workflow2.ipynb
+++ b/ACAI/acaisdk/example/example2/example_workflow2.ipynb
@@ -91,7 +91,8 @@
    "source": [
     "# Upload input files and create a new file set on the fly\n",
     "input_dir = os.path.join(workspace, 'demo/dataset/train/')\n",
-    "File.convert_to_file_mapping([input_dir], 'dataset/')[0]\\\n",
+    "File.convert_to_file_mapping([input_dir], 'dataset/')\\\n",
+    "    .files_to_upload\\\n",
     "    .upload()\\\n",
     "    .as_new_file_set('train_dataset')"
    ]
@@ -120,7 +121,7 @@
     "    'name': 'my_acai_job'\n",
     "}\n",
     "\n",
-    "train_job = Job().with_attributes(job_setting).register().run()"
+    "train_job = Job().with_attributes(job_setting).run()"
    ]
   },
   {
@@ -157,7 +158,8 @@
    "outputs": [],
    "source": [
     "input_dir = os.path.join(workspace, 'demo/dataset/eval')\n",
-    "File.convert_to_file_mapping([input_dir], 'dataset/eval/')[0]\\\n",
+    "File.convert_to_file_mapping([input_dir], 'dataset/eval/')\\\n",
+    "    .files_to_upload\\\n",
     "    .upload()\\\n",
     "    .as_new_file_set('eval_dataset')"
    ]
@@ -197,7 +199,7 @@
     "    'name': 'my_acai_job_2'\n",
     "}\n",
     "\n",
-    "eval_job = Job().with_attributes(job_setting_eval).register().run()"
+    "eval_job = Job().with_attributes(job_setting_eval).run()"
    ]
   },
   {
